--- a/client/chat.html
+++ b/client/chat.html
@@ -18,6 +18,7 @@
     </div>
     <footer>
         <div class="repostContainer"></div>
+        <select id='smile' class='smile' multiple="multiple" onclick="sendToInput( this.value)"></select>
         <input id="text" type="text" placeholder="Введите сообщение"/>
         <button id="send" onclick="sendButtonClick()">&#9658;</button>
     </footer>
